force-app/main/default/objects/Course_Details__c/fields/Course_period__c.field-meta.xml
<CustomField>
    <fullName>Course_period__c</fullName>
    <label>Course period</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-month</fullName>
            </value>
            <value>
                <fullName>2-months</fullName>
            </value>
            <value>
                <fullName>3-months</fullName>
            </value>
            <value>
                <fullName>4-months</fullName>
            </value>
            <value>
                <fullName>5-months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>