force-app/main/default/objects/Course_Details__c/fields/Course_start_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_start_Date__c</fullName>
    <label>Course start Date</label>
    <type>Date</type>
</CustomField>