force-app/main/default/objects/Course_Details__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banglore</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Hydrabad</fullName>
            </value>
            <value>
                <fullName>Maharastra</fullName>
            </value>
            <value>
                <fullName>pune</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>