force-app/main/default/objects/Course_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Type__c</columns>
    <columns>Course_period__c</columns>
    <columns>Location__c</columns>
    <columns>Course_start_Date__c</columns>
    <columns>Course_Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>